# gh-board

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  build.rs
.claude/skills/release/: SKILL.md
.claude/skills/setup/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.vhs/: README.md  bulk-archive.tape  demo.tape  setup.sh  views.tape
assets/: DEMO_SCRIPT.md  demo.tape  skills.md  skills.md.tmpl
docs/themes/: README.md  catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  gruvbox-dark.toml  gruvbox-light.toml  nord.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
locales/: en.yml  ja.yml
src/: action.rs  app.rs  app_state.rs  cache.rs  cli.rs  clipboard.rs  color.rs  command.rs  config.rs  event.rs  i18n.rs  keymap.rs  main.rs
src/app_state/: board.rs  bulk.rs  detail.rs  filter.rs  mod.rs  modal.rs
src/github/: client.rs  convert.rs  mod.rs  queries.rs  update_check.rs
src/github/client/: mod.rs  mutations.rs  queries.rs
src/github/graphql/: add_assignees.graphql  add_comment.graphql  (+32 more)
src/model/: board_cache.rs  mod.rs  project.rs  roadmap.rs  state.rs
src/ui/: archived_list.rs  board.rs  card.rs  comment_list.rs  confirm.rs  create_card.rs  detail.rs  edit_card.rs  filter_bar.rs  group_by_select.rs  help.rs  layout.rs  mod.rs  project_list.rs  reaction_picker.rs  repo_select.rs  roadmap.rs  scroll_fade.rs  statusline.rs  tab_bar.rs  table.rs  theme.rs
(+4 files in other folders)
